- "Currently Playing" game will now rotate every 5 minutes instead of 10.
- Updated the help command for "filteradd" to show how Kaguya's wildcard filter works.
- Help command for $roll is now up to date.
- Help command for $kaguyaexit is now up to date.
- Fixed a bug where if you got a non-critical 100 roll it would say you've won a critical anyway.

Version 1.13.1

- $ban now has the ability to take in more than one word as the "ban reason" ($b <USER> <this can be a long reason now>)
- Updated the help command for $toggleannouncements
- Updated the "On new server join 

Version 1.13

- Removed a 3 second delay I had with $clear that was there for no reason...clearing of messages should happen a lot faster now.
- "MessageEdits" logtype has been renamed to "UpdatedMessages"
- Made a minor update to the $h critical command.
- For all "Emotion" related commands, if you mention a user it will now display their username instead of <@USERID>

Version 1.12.1

- Removed $cmds and $mdls from help command (this was causing a LOT of confusion srryy!!!!)

Verison 1.12

- $osutop -n extension added. You can use this command to target a specific top play and see stats on it. Ex: "$osutop -n 65"
- Added $toggleannouncements to the utility module
- Added a help command for $toggleannouncements
- Fixed a small formatting issue with $h (mute wasn't separated)
- $help has been completely re-written. You can now scroll through the command list with emojis (reactions) and the format is different. Try it out!
- $commands and $modules have been removed as they have basically been merged into the $h command.

Version 1.11.1

- Fixed a bug where $echo wasn't working.
- $echo no longer has a title in the embed.

Version 1.11

- $n command has been given a new dedicated source of lewds. 110 new drawings (however featuring similar characters) have been added!
    - This is exclusive for $n on its own, and does not affect any tags or $n bomb.